1st test file, acting more like an example

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -1,8 +1,20 @@
 
-SOURCE_FILES = $(shell find $(cfg_srcdir)/lib -type f -name \*.c)
-OBJECT_FILES = $(addsuffix .o, $(basename $(SOURCE_FILES)))
-TARGET_FILE  = liblocasberos.la
-
-cfg_distdir  = $(cfg_builddir)/lib
+cfg_distdir   = $(cfg_builddir)/lib
+TRY_SRC_FILES = $(shell find $(cfg_trydir)/lib -type f -name \*.cc)
+SRC_FILES     = $(shell find $(cfg_srcdir)/lib -type f -name \*.c)
+LIB_NAME      = liblocasberos
+TRY_EXE_NAME  = try_caslib
 
 include $(cfg_srcroot)/makefile.rules
+
+.PHONY:
+compile: $(O_OBJ_FILES) $(G_OBJ_FILES)
+
+.PHONY:
+lib: $(O_LIB_FILE) $(G_LIB_FILE)
+
+.PHONY: test
+test: CXXFLAGS += -I$(cfg_srcdir)/lib
+test: LDFLAGS  += -lunittest++
+test: $(TRY_EXE_FILE)
+	$(TRY_EXE_FILE)
