--- a/makefile.rules
+++ b/makefile.rules
@@ -1,17 +1,31 @@
 # -*- mode: makefile-gmake; -*-
 
-LOBJECT_FILES = $(addsuffix .lo, $(basename $(OBJECT_FILES)))
+O_OBJ_FILES   = $(addsuffix _o.lo, $(basename $(SRC_FILES)))
+G_OBJ_FILES   = $(addsuffix _g.lo, $(basename $(SRC_FILES)))
+O_LIB_FILE    = $(addsuffix _o.la, $(LIB_NAME))
+G_LIB_FILE    = $(addsuffix _g.la, $(LIB_NAME))
+TRY_OBJ_FILES = $(addsuffix _g.lo, $(basename $(TRY_SRC_FILES))) $(G_OBJ_FILES)
+TRY_EXE_FILE  = $(cfg_distdir)/$(TRY_EXE_NAME)
 
-.PHONY:
-compile: $(LOBJECT_FILES)
-
-.PHONY:
-lib: $(cfg_distdir)/$(TARGET_FILE)
-
-%.la: $(LOBJECT_FILES)
+%_g.la: $(G_OBJ_FILES)
 	$(LIBTOOL) --mode=link $(CC) -o $@ $^ $(LDFLAGS)
 
-%.lo: %.c
-	$(LIBTOOL) --mode=compile $(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $^
+%_o.la: $(O_OBJ_FILES)
+	$(LIBTOOL) --mode=link $(CC) -o $@ $^ $(LDFLAGS)
+
+%_g.lo: %.c
+	$(LIBTOOL) --mode=compile $(CC) -g $(CPPFLAGS) $(CFLAGS) -c -o $@ $^
+
+%_g.lo: %.cc
+	$(LIBTOOL) --mode=compile $(CXX) -g $(CPPFLAGS) $(CXXFLAGS) -c -o $@ $^
+
+%_o.lo: %.c
+	$(LIBTOOL) --mode=compile $(CC) -O2 $(CPPFLAGS) $(CFLAGS) -c -o $@ $^
+
+%_o.lo: %.cc
+	$(LIBTOOL) --mode=compile $(CXX) -O2 $(CPPFLAGS) $(CXXFLAGS) -c -o $@ $^
+
+$(TRY_EXE_FILE): $(TRY_OBJ_FILES)
+	$(LIBTOOL) --mode=link $(CXX) -o $@ $^ $(LDFLAGS)
 
 .SUFFIX: .lo .la
