implementing service_validate that works but not yet done

--- a/src/caslib/makefile
+++ b/src/caslib/makefile
@@ -5,18 +5,20 @@ LNK_NAME  = libcaslib
 include $(cfg_srcroot)/makefile.rules
 
 .PHONY: compile
-compile: CFLAGS += -W -Wall -pedantic -std=c99
+compile: CFLAGS += -W -Wall -pedantic -std=c99 -I/usr/include/libxml2
 compile: $(O_OBJ_FILES) $(G_OBJ_FILES)
 
 .PHONY: link
-link: LD      = gcc
-link: CFLAGS += -W -Wall -pedantic -std=c99
+link: LD       = gcc
+link: LDFLAGS += -lcurl -lxml2
+link: CFLAGS  += -W -Wall -pedantic -std=c99 -I/usr/include/libxml2
 link: $(O_LNK_FILE) $(G_LNK_FILE)
 
 .PHONY:
 install: link
-	$(LIBTOOL) $(LIBTOOLFLAGS) --mode=install cp $(G_LNK_FILE) $(install_root)/usr/lib/$(G_LNK_FILE)
-	$(LIBTOOL) $(LIBTOOLFLAGS) --mode=install cp $(O_LNK_FILE) $(install_root)/usr/lib/$(O_LNK_FILE)
+	$(LIBTOOL) $(LIBTOOLFLAGS) --mode=install cp $(G_LNK_FILE) $(root)/usr/lib/$(G_LNK_FILE)
+	$(LIBTOOL) $(LIBTOOLFLAGS) --mode=install cp $(O_LNK_FILE) $(root)/usr/lib/$(O_LNK_FILE)
+	$(LIBTOOL) $(LIBTOOLFLAGS) --mode=finish $(root)/usr/lib
 
 .PHONY:
 clean:
