--- a/try/caslib/makefile
+++ b/try/caslib/makefile
@@ -5,7 +5,7 @@ LNK_NAME  = try_caslib
 include $(cfg_srcroot)/makefile.rules
 
 .PHONY: compile
-compile: CXXFLAGS += -W -Wall -pedantic -I$(cfg_srcdir)/caslib -I/usr/include/unittest++
+compile: CXXFLAGS += -W -Wall -pedantic -I$(cfg_srcdir)/utilities -I$(cfg_srcdir)/caslib -I/usr/include/unittest++
 compile: $(G_OBJ_FILES)
 
 .PHONY: link
