--- a/src/apache2_module/makefile
+++ b/src/apache2_module/makefile
@@ -1,4 +1,8 @@
 
 .PHONY: compile
 compile:
-	$(APXS) -c -I$(cfg_srcdir)/caslib $(cfg_srcdir)/apache2_module/mod_locasberos.c
+	$(APXS) -c -I$(cfg_srcdir) -L$(root)/usr/lib -lcaslib $(cfg_srcdir)/apache2_module/mod_locasberos.c
+
+.PHONY: install
+install:
+	$(LIBTOOL) --mode=install cp $(cfg_srcdir)/apache2_module/mod_locasberos.la $(apxs_libexecdir)
