--- a/try/caslib/makefile
+++ b/try/caslib/makefile
@@ -2,7 +2,7 @@
 SRC_FILES = $(shell find $(cfg_trydir)/caslib -type f -name \*.cc) $(cfg_trydir)/fixtures.cc
 LNK_NAME  = try_caslib
 
-include $(cfg_srcroot)/makefile.rules
+include $(cfg_srcdir)/makefile.rules
 
 .PHONY: compile
 compile: CXXFLAGS += -W -Wall -pedantic -I$(cfg_srcdir)/utilities -I$(cfg_srcdir) -I$(cfg_trydir) -I/usr/include/unittest++
