--- a/src/caslib/makefile
+++ b/src/caslib/makefile
@@ -5,13 +5,13 @@ LNK_NAME  = libcaslib
 include $(cfg_srcdir)/makefile.rules
 
 .PHONY: compile
-compile: CFLAGS += -Wall -Wextra -Wwrite-strings -Wconversion -Werror -pedantic -std=c99 -I/usr/include/libxml2
+compile: CFLAGS += -Wall -Wextra -Wwrite-strings -Wconversion -Werror -pedantic -std=c99 -I$(cfg_srcdir) -I/usr/include/libxml2
 compile: $(O_OBJ_FILES) $(G_OBJ_FILES)
 
 .PHONY: link
 link: LD       = gcc
 link: LDFLAGS += -lcurl -lxml2
-link: CFLAGS  += -Wall -Wextra -Wwrite-strings -Wconversion -Werror -pedantic -std=c99 -I/usr/include/libxml2
+link: CFLAGS  += -Wall -Wextra -Wwrite-strings -Wconversion -Werror -pedantic -std=c99
 link: $(O_LNK_FILE) $(G_LNK_FILE)
 
 .PHONY:
