caslib_cookie_unserialize implementation

--- a/src/caslib/makefile
+++ b/src/caslib/makefile
@@ -5,7 +5,7 @@ LNK_NAME  = libcaslib
 include $(cfg_srcdir)/makefile.rules
 
 .PHONY: compile
-compile: CFLAGS += -Wall -Wextra -Wwrite-strings -Wconversion -Werror -pedantic -std=c99 -I$(cfg_srcdir) -I/usr/include/libxml2
+compile: CFLAGS += -Wall -Wextra -Wwrite-strings -Wconversion -Wno-sign-conversion -Werror -pedantic -std=c99 -I$(cfg_srcdir) -I/usr/include/libxml2
 compile: $(O_OBJ_FILES) $(G_OBJ_FILES)
 
 .PHONY: link
