--- a/doc/examples/apache/proxy.conf
+++ b/doc/examples/apache/proxy.conf
@@ -2,18 +2,22 @@
   DocumentRoot /srv/http/locasberos/
   ServerName proxy.localhost.localdomain
 
-  <Location />
+  <Proxy http://127.0.0.1:4080/>
     AuthType Locasberos
     LocasberosEnabled On
     LocasberosAuthoritative On
     LocasberosEndpoint https://login.locaweb.com.br
     Require valid-user
-  </Location>
+  </Proxy>
 
-  ProxyRequests On
+  ProxyRequests Off
   ProxyVia On
   ProxyPass / http://127.0.0.1:4080/
   ProxyPassReverse / http://127.0.0.1:4080/
   ProxyPassReverseCookieDomain 127.0.0.1 proxy.localhost.localdomain
 
+  RewriteEngine On
+  RewriteCond %{LA-U:REMOTE_USER} (.+)
+  RewriteRule . - [E=RU:%1]
+  RequestHeader set Remote-User "%{RU}e"
 </VirtualHost>
