adding passenger example

--- a/doc/examples/apache/proxy.conf
+++ b/doc/examples/apache/proxy.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  DocumentRoot /srv/http/locasberos/
+  DocumentRoot /srv/http/locasberos/proxy/
   ServerName proxy.localhost.localdomain
 
   <Proxy http://127.0.0.1:4080/>
