--- a/doc/examples/apache/static.conf
+++ b/doc/examples/apache/static.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-  DocumentRoot /srv/http/locasberos/
-  ServerName simple.localhost.localdomain
+  DocumentRoot /srv/http/locasberos/static/
+  ServerName static.localhost.localdomain
 
   <Location />
     AuthType Locasberos
