--- a/doc/examples/apache/mod_passenger/apache.conf
+++ b/doc/examples/apache/mod_passenger/apache.conf
@@ -3,15 +3,11 @@ PassengerRuby /usr/bin/ruby
 PassengerRoot /srv/http/locasberos/
 
 <VirtualHost *:80>
-  DocumentRoot /srv/http/locasberos/ruby
+  DocumentRoot /srv/http/locasberos/
   ServerName passenger.localhost.localdomain
 
-  <Directory /srv/http/locasberos/ruby/>
-    Options -MultiViews
-  </Directory>
-
-  <Directory /srv/http/locasberos/ruby/example>
-    Options -MultiViews
+  <Directory /srv/http/locasberos/sinatra/>
+    Options -MultiViews -Indexes
   </Directory>
 
   <Location />
@@ -22,8 +18,8 @@ PassengerRoot /srv/http/locasberos/
     Require valid-user
   </Location>
 
-  SetEnv RUBYLIB "/srv/http/locasberos/ruby/example"
+  SetEnv RUBYLIB "/srv/http/locasberos/sinatra"
   PassengerEnabled on
-  PassengerAppRoot /srv/http/locasberos/ruby/example
-  RackBaseURI /example
+  PassengerAppRoot /srv/http/locasberos/sinatra
+  RackBaseURI /
 </VirtualHost>
