--- a/doc/examples/apache/vhost.conf
+++ b/doc/examples/apache/vhost.conf
@@ -1,6 +1,10 @@
 <VirtualHost *:80>
-  DocumentRoot /srv/http/locasberos/static/
+  DocumentRoot /srv/http/locasberos/
   ServerName static.localhost.localdomain
+
+  <Directory /srv/http/locasberos/>
+    Options +MultiViews +Indexes
+  </Directory>
 
   <Location />
     AuthType Locasberos
