--- a/doc/examples/apache/mod_proxy/apache.conf
+++ b/doc/examples/apache/mod_proxy/apache.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  DocumentRoot /srv/http/locasberos/proxy/
+  DocumentRoot /srv/http/locasberos/
   ServerName proxy.localhost.localdomain
 
   <Proxy http://127.0.0.1:4080/>
