cookie signatures using hmac-sha1
This commits implements the cookie signature functionality using
hmac-sha1 signatures. As such, it introduces a new dependency to the
project: openssl.

--- a/src/caslib/makefile
+++ b/src/caslib/makefile
@@ -10,7 +10,7 @@ compile: $(O_OBJ_FILES) $(G_OBJ_FILES)
 
 .PHONY: link
 link: LD       = gcc
-link: LDFLAGS += -lcurl -lxml2
+link: LDFLAGS += -lcurl -lxml2 -lcrypto -lssl
 link: $(O_LNK_FILE) $(G_LNK_FILE)
 
 .PHONY:
