removing failing test which was not doing much anyways: there other tests covering this already

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 *.log
 .libs/
 .bundle/
-doc/build/
-dist/
-try/caslib/try_caslib_dbg
-
-try/tmp
+/doc/build/
+/dist/
+/try/caslib/try_caslib_dbg
+/try/functional/vendor/
+/try/tmp
